// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JobCard - CompanyLink should bold keyword 1`] = `
<Link
  className="companyLink"
  link="/jobCard"
  onClick={[Function]}
  title="Jobs at Seek Asia"
>
  <span
    className="companyName"
  >
    <span
      className="highlight"
      key="0"
    >
      Seek
    </span>
    <span
      className=""
      key="1"
    >
       Asia
    </span>
  </span>
</Link>
`;

exports[`JobCard - CompanyLink should render with default props 1`] = `
<Link
  className="companyLink"
  link="/jobCard"
  onClick={[Function]}
  title="Jobs at Seek Asia"
>
  <span
    className="companyName"
  >
    Seek Asia
  </span>
</Link>
`;
